# CognitiveFatigue_TaskSpecificity

./: .Rhistory  .gitignore  .pdm-python  README.md  pyproject.toml
HMM_modeling/: 1_wrangling_HMM_data.Rmd  2_fit_small_HMM.ipynb  2_fit_small_heirarchical_HMM.ipynb  3_fit_non_heirarchical_HMM.ipynb  4_examine_HMM_results.ipynb  fit_nonheirarchical_HMM.py  fit_pooled_HMM.py  run_HMM.sh  run_pooled_HMM.sh  subject_data_for_HMM.json
HMM_modeling/cleaned_data_files/: subject_ids.txt
HMM_modeling/hmmlearn_implementation/: 1_find_best_pooled_model.ipynb  1_test_HMMlearn.ipynb  2_analyze_pooled_model.ipynb  fit_nonheirarchical_HMM_HMMlearn.py  run_HMMlearn_simple.sh
HMM_modeling/pymc_implementations/: 2_fit_small_heirarchical_HMM.ipynb  3_fit_non_heirarchical_HMM.ipynb  4_examine_HMM_results.ipynb  README.md  fit_nonheirarchical_HMM.py  fit_pooled_HMM.py  run_nonheirarchical_HMM.sh  run_pooled_HMM.sh
HMM_modeling/results_1state_n2000_t2000/: trace_subject_5.nc
cognition_js_files/: go-no-go-classic-cog.js  spatial-recall-cognition.js
data_anonymized/: anonymize_data.py  pilotA.csv
iteration_2_pilotE/: README.md  ds_test.html  experiment-E.html  experiment.html
pilotA/: Untitled.Rmd  experiment.html  experiment_looping.html
pilotA/js/: gradcpt.js  (+3 more)
pilotB/: experiment.html  vis_search_test.html
pilotC_inPerson/: experiment.html
pilotD_prolific/: README.md  experiment.html
pilotD_prolific_firstSmallSample/: README.md  experiment.html
pilotD_prolific_second/: README.md  experiment.html
pilotE/: experiment-E.html
pilotE_SPR/: README.md  experiment.html
(+169 files in other folders)
